Fix missing tag and size alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -184,6 +184,8 @@ p {
 
 .portfolio-item>div>img {
     border: 1px solid #777777;
+    width: 100%;
+    height: 230px;
 }
 
 .portfolio-item-desc {
